refactor: replace hardcoded strings with constants and simplify stream collectors across controllers